Linked SPA to PaymentDetailsAPI

--- a/SPA/src/styles.css
+++ b/SPA/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+
+input.ng-touched.ng-invalid{
+  border-color: red;
+}
+input.ng-valid{
+  border-color: green;
+}
+
+.red-icon{
+  color: red;
+}
+.green-icon{
+  color: green;
+}
+
+#toast-container>div{
+  opacity: 1;
+}
